HW1-sol/css/style.css
.logo {
    margin-top: 50px;
    margin-left: 50px;
}

hr {
    height: 5px;
    margin-left: 5px;
    margin-right: 5px;
    background-color:black;
}

.product {
    font-size: 25px;
    font-family: sans-serif;
    margin-top: 20px;
    text-align: center;
    font-weight: bold;
}

.cart {
    font-size: 25px;
    font-family: sans-serif;
    margin-top: 20px;
    text-align: center;
    font-weight: normal;
}

.title {
    font-size: 35px;
    font-family: Helvetica;
    margin-top: 70px;
    font-weight: normal;
    text-align: center;
}

.product-picture {
    margin-top: 50px;
    float: center;
    border: 4px solid #000;
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 300px;
}

.product-description {
    font-size: 25px;
    font-weight: normal;
    font-family: sans-serif;
    margin-top: 20px;
    margin-left: 565px;
}

.main-product {
    margin-top: 50px;
    float: center;
    border: 4px solid #000;
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 650px;
}

.menu {
    margin-top: 80px;
    margin-left: 565px;
    text-align: center;
    font-size: 25px;
    font-family: sans-serif;
    font-weight: normal;
}

.dropdown {
    margin-left: 565px;
    text-align: center;
    font-size: 25px;
    font-family: sans-serif;
    font-weight: normal;
}

.add-cart {
    border: 3px solid #000;
    margin-left: 30px;
    font-size: 25px;
    font-family: sans-serif;
    font-weight: normal;
}

.price {
    margin-left: 565px;
    margin-right: 600px;
    font-size: 25px;
    font-family: sans-serif;
}

.cart-picture {
    margin-top: 50px;
    float: center;
    border: 4px solid #000;
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 150px;
}

.cart-description {
    font-weight: normal;
    margin-top: 20px;
    font-size: 25px;
    font-family: sans-serif;
    text-align: center;
}

.remove {
    font-weight: bold;
    margin-top: 10px;
    font-size: 15px;
    font-family: sans-serif;
    text-align: center;
}

.hr2 {
    height: 5px;
    margin-left: 300px;
    margin-right: 300px;
    background-color:black;
}

.checkout {
    text-align: center;
    border: 3px solid #000;
    display: inline-block;
    font-size: 25px;
    font-family: sans-serif;
    font-weight: normal;
}

a:hover {
    text-decoration: none;
    background-color: yellow;
  }

